tests/paczka1/fuzzy1/21798392.err
Error in line 1: su0hVjq A424 10,7
Error in line 6: abAfG S936 56,4
Error in line 8: abAfG A717 42,6
Error in line 24: R8igXthkIPX A717 32,2
Error in line 33: abAfG S936 1,4
